app/assets/stylesheets/application.css.scss
$navbarBackground: #3B5998;
$navbarBackgroundHighlight: $navbarBackground;
$navbarLinkBackgroundHover: $navbarBackground;
$navbarText: #FFF;
$navbarBrandColor: #FFF;
$navbarLinkColor: #FFF;
$navbarLinkColorHover: #FFF;
$navbarSearchPlaceholderColor: #FFF;
$sansFontFamily: 'lucida grande',tahoma,verdana,arial,sans-serif;

@import "bootstrap";

body {
  padding-top: 60px;
  font-size: 14px;
}

a {
  opacity: 0.8;
}

a:hover {
  opacity: 1.0;
}

.navbar {
  font-family: $monoFontFamily;
  .brand {
    opacity: 1.0;
    padding-top: 10px;
    font-weight: bold;
  }

  .nav > li > a {
    font-weight: bold;
  }

  .brand:hover {
  }
}

footer.well {
  font-family: $monoFontFamily;
  color: #737373;
  text-align: center;
  margin: 10px 0 0 0;
  a {
    color: #3B5998;
  }
}

@import "bootstrap-responsive";
@import "searches";
@import "pages";

h3, h2, h1 {
  line-height: 1.1em
}

.container {
  max-width: 767px;
}

@media (max-width: 767px) {
  footer.well {
    margin-left: -20px;
    margin-right: -20px;
  }
}

